k8s/ingress-nginx/ingress-nginx-service.yaml
apiVersion: extension/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    niginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: frontend-client-clusterip-service
              servicePort: 4000
          - path: /api/
            backend:
              serviceName: edge-client-clusterip-service
              servicePort: 8080
